[mantine.dev] Fix spacing broken for styles api demo

--- a/packages/@mantinex/demo/src/StylesApiDemo/StylesApiDemo.module.css
+++ b/packages/@mantinex/demo/src/StylesApiDemo/StylesApiDemo.module.css
@@ -7,12 +7,6 @@
   cursor: help;
 
   @mixin hover {
-    @mixin light {
-      background-color: var(--mantine-color-gray-0);
-    }
-
-    @mixin dark {
-      background-color: var(--mantine-color-dark-6);
-    }
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
   }
 }
